css/mathquill.css
/*
 * LaTeX Math in pure HTML and CSS -- No images whatsoever
 * v0.xa
 * by Jay and Han
 * Lesser GPL Licensed: http: //www.gnu.org/licenses/lgpl.html
 * 
 * This file is automatically included by mathquill.js
 * 
 */

/* JWM: we don't want this at desmos because we delay-load these fonts
@font-face {
  font-family: Symbola;
  src: url(../font/Symbola.eot);
  src: local("Symbola Regular"), local("Symbola"),
    url(../font/Symbola.ttf) format("truetype"),
    url(../font/Symbola.otf) format("opentype"),
    url(../font/Symbola.svg#Symbola) format("svg");
}
*/

.mathquill-editable,
.mathquill-rendered-math,
.mathquill-rendered-math .cursor,
.mathquill-rendered-math .underline,
.mathquill-rendered-math .overline,
.mathquill-rendered-math .font,
.mathquill-rendered-math sup,
.mathquill-rendered-math sub,
.mathquill-rendered-math .sup,
.mathquill-rendered-math .sub,
.mathquill-rendered-math .fraction,
.mathquill-rendered-math .large-operator,
.mathquill-rendered-math .sqrt-prefix,
.mathquill-rendered-math .sqrt-stem,
.mathquill-rendered-math .paren,
.mathquill-rendered-math .array,
.mathquill-rendered-math .block {
  display: -moz-inline-box;
  display: inline-block;
  padding-top: .075em;
}
.mathquill-rendered-math .fraction, .mathquill-rendered-math .large-operator, x:-moz-any-link { /* Firefox 2 (and older?) only */
  display: -moz-groupbox; /* because display:inline-block is FUBAR in Gecko < 1.9.0 */
}
.mathquill-rendered-math .fraction, .mathquill-rendered-math .large-operator, x:-moz-any-link, x:default { /* Firefox 3+ (Gecko 1.9.0+) */
  display: inline-block;
}
.mathquill-editable, .mathquill-embedded-latex .mathquill-editable {
  /*border: 1px solid gray;*/
  padding: 2px;
}
.mathquill-embedded-latex .mathquill-editable {
  margin: 1px;
}
.mathquill-textbox {
  overflow-x: auto;
  overflow-y: hidden; /*so IE8 won't show a vertical scrollbar*/
}

.mathquill-editable .textarea, .mathquill-rendered-math .textarea {
  position: relative;
  user-select: text;
  -moz-user-select: text;
  -webkit-user-select: text;
}
.mathquill-editable .textarea textarea, .mathquill-rendered-math .textarea textarea, .mathquill-rendered-math .selectable {
  position: absolute;
  clip: rect(1em 1em 1em 1em); /* the only way to hide the textarea *and the blinking insertion point* in IE */
  user-select: text;
  -moz-user-select: text;
  -webkit-user-select: text;
}

.mathquill-editable .cursor {
  border-left: 1px solid black;
  margin-right: -1px;
  position: relative;
  z-index: 1;
}
.mathquill-editable .cursor.blink {
  visibility: hidden;
}
.mathquill-editable.empty:after, .mathquill-textbox:after, .mathquill-rendered-math .empty:after {
  visibility: hidden;
  content: 'c';
}
/*separated from above because unrecognized pseudoclasses invalidate the entire selector*/
.mathquill-editable .cursor:only-child:after,
.mathquill-editable .textarea+.cursor:last-child:after {
  visibility: hidden;
  content: 'c';
}

.mathquill-rendered-math .matrixed {
  background: white;
}

.mathquill-editable .selection,
.mathquill-rendered-math .selection,
.mathquill-editable .selection .mathquill-rendered-math,
.mathquill-rendered-math .selection .underline,
.mathquill-rendered-math .selection .overline,
.mathquill-rendered-math .selection .font,
.mathquill-rendered-math .selection sup,
.mathquill-rendered-math .selection sub,
.mathquill-rendered-math .selection .sup,
.mathquill-rendered-math .selection .sub,
.mathquill-rendered-math .selection .fraction,
.mathquill-rendered-math .selection .large-operator,
.mathquill-rendered-math .selection .sqrt-prefix,
.mathquill-rendered-math .selection .sqrt-stem,
.mathquill-rendered-math .selection .paren,
.mathquill-rendered-math .selection .array,
.mathquill-editable .selection .matrixed,
.mathquill-rendered-math .selection .matrixed,
.mathquill-rendered-math .selection .block {
  background: #B4D5FE;
  background: Highlight;
  color: HighlightText;
  border-color: HighlightText;
}
.mathquill-editable .selection.blur,
.mathquill-rendered-math .selection.blur,
.mathquill-editable .selection.blur .mathquill-rendered-math,
.mathquill-rendered-math .selection.blur .underline,
.mathquill-rendered-math .selection.blur .overline,
.mathquill-rendered-math .selection.blur .font,
.mathquill-rendered-math .selection.blur sup,
.mathquill-rendered-math .selection.blur sub,
.mathquill-rendered-math .selection.blur .sup,
.mathquill-rendered-math .selection.blur .sub,
.mathquill-rendered-math .selection.blur .fraction,
.mathquill-rendered-math .selection.blur .large-operator,
.mathquill-rendered-math .selection.blur .sqrt-prefix,
.mathquill-rendered-math .selection.blur .sqrt-stem,
.mathquill-rendered-math .selection.blur .paren,
.mathquill-rendered-math .selection.blur .array,
.mathquill-editable .selection.blur .matrixed,
.mathquill-rendered-math .selection.blur .matrixed,
.mathquill-rendered-math .selection.blur .block {
  background: #D4D4D4;
  color: black;
  border-color: black;
}
/* ... */

